force-app/main/default/objects/SLA_Configuration__mdt/SLA_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>SLA Configuration</label>
    <pluralLabel>SLA Configurations</pluralLabel>
</CustomObject>