force-app/main/default/objects/SLA_Configuration__mdt/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <label>Account Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>