force-app/main/default/objects/SLA_Configuration__mdt/fields/Critical_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Critical_Keywords__c</fullName>
    <label>Critical Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>