force-app/main/default/objects/SLA_Configuration__mdt/fields/Priority_Weight__c.field-meta.xml
<CustomField>
    <fullName>Priority_Weight__c</fullName>
    <label>Priority Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>